# learn_cmake

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
external_lib/: CMakeLists.txt
external_lib/include/: my_external_lib.h
my_math/: CMakeLists.txt
my_math/include/: my_math.h
my_math/src/: my_math.cpp
my_utils/: CMakeLists.txt
my_utils/include/: my_utils.h
my_utils/src/: my_utils.cpp
